kubernetes/product-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: product-service

spec:
  replicas: 1

  selector:
    matchLabels:
      app: product-service

  template:
    metadata:
      labels:
        app: product-service

    spec:
      containers:
      - name: product-service

        image: kellykyabega/product-service:v1

        ports:
        - containerPort: 8080
