kubernetes/order-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: order-service
  namespace: ecommerce

spec:
  selector:
    app: order-service

  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000

  type: ClusterIP
