kubernetes/product-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: product-service
  namespace: ecommerce

spec:
  selector:
    app: product-service

  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

  type: ClusterIP
